// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordian component li buttons open section on click 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        id={0}
        onClick={[Function]}
      >
        title 1
      </button>
      <div>
        section 1 & some content
      </div>
    </li>
    <li
      key="1"
    >
      <button
        id={1}
        onClick={[Function]}
      >
        title 2
      </button>
      <div />
    </li>
    <li
      key="2"
    >
      <button
        id={2}
        onClick={[Function]}
      >
        title 3
      </button>
      <div />
    </li>
    <li
      key="3"
    >
      <button
        id={3}
        onClick={[Function]}
      >
        title 4
      </button>
      <div />
    </li>
  </ul>
</div>
`;

exports[`Accordian component renders empty list to UI without props passed 1`] = `
<div>
  <ul />
</div>
`;

exports[`Accordian component renders list items to UI with props passed 1`] = `
<div>
  <ul>
    <li>
      <button
        id={0}
        onClick={[Function]}
      >
        title 1
      </button>
      <div />
    </li>
    <li>
      <button
        id={1}
        onClick={[Function]}
      >
        title 2
      </button>
      <div />
    </li>
    <li>
      <button
        id={2}
        onClick={[Function]}
      >
        title 3
      </button>
      <div />
    </li>
    <li>
      <button
        id={3}
        onClick={[Function]}
      >
        title 4
      </button>
      <div />
    </li>
  </ul>
</div>
`;

exports[`Accordian component shows only one section at a time 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        id={0}
        onClick={[Function]}
      >
        title 1
      </button>
      <div />
    </li>
    <li
      key="1"
    >
      <button
        id={1}
        onClick={[Function]}
      >
        title 2
      </button>
      <div />
    </li>
    <li
      key="2"
    >
      <button
        id={2}
        onClick={[Function]}
      >
        title 3
      </button>
      <div />
    </li>
    <li
      key="3"
    >
      <button
        id={3}
        onClick={[Function]}
      >
        title 4
      </button>
      <div>
        section 4 & some content
      </div>
    </li>
  </ul>
</div>
`;
